--- a/Makefile.docker
+++ b/Makefile.docker
@@ -66,6 +66,7 @@ ifeq ($(DOCKER),)
 else
 	docker version
 	for arch in $(LINUX_ARCH); do \
+	    docker rmi $(DOCKER_IMAGE_NAME)-$${arch}:latest 2>/dev/null; \
 	    docker rmi $(DOCKER_IMAGE_NAME)-$${arch}:$(VERSION) 2>/dev/null; \
 	    docker build -t $(DOCKER_IMAGE_NAME)-$${arch}:$(VERSION) build/docker/$${arch}  && \
 	    docker tag $(DOCKER_IMAGE_NAME)-$${arch}:$(VERSION) $(DOCKER_IMAGE_NAME)-$${arch}:latest ;\
